bugfix z-indexing

--- a/grails-app/assets/themes/accessibility/semantic.css
+++ b/grails-app/assets/themes/accessibility/semantic.css
@@ -26634,6 +26634,10 @@ Floated Menu / Item
 #mainMenue {
   z-index: 102;
 }
+
+.la-ctrls .ui.dropdown .menu {
+  z-index: 101;
+}
 /*!
  * # Semantic UI 2.4.2 - Message
  * http://github.com/semantic-org/semantic-ui/
