--- a/grails-app/assets/themes/laser/semantic.css
+++ b/grails-app/assets/themes/laser/semantic.css
@@ -26409,6 +26409,10 @@ Floated Menu / Item
 #mainMenue {
   z-index: 102;
 }
+
+.la-ctrls .ui.dropdown .menu {
+  z-index: 101;
+}
 /*!
  * # Semantic UI 2.4.2 - Message
  * http://github.com/semantic-org/semantic-ui/
